# face_generator

./: .gitignore  ASSET_PIPELINE.md  Cargo.toml  README.md
assets/: all.svgr  palette.json  probabilities
painterly_effect/: Cargo.toml
painterly_effect/examples/: face.rs
painterly_effect/src/: lib.rs
scripts/: feature_setup.py  make_example.sh  process_face_assets.py  skull_setup.py
src/: color_scheme.rs  complexion.rs  complexion.rsr  eyes.rs  face.rs  feature.rs  feature.rsr  lib.rs  lib.rsr  main.rs  palette.rs  placeable_feature.rs  template.rs  template.rsr  weights.rs
