[package]
name = "npc_generator"
version = "0.1.0"
authors = ["Alec Deason <alec50@tinycountry.com>"]
edition = "2018"

[lib]
name = "face_generator"
crate-type = ["rlib"]


[dependencies]
    rand = "0.6.0-pre.1"
    serde_json = "1.0"
    serde = "1.0"
    serde_derive = "1.0"
    svgtypes = "0.2.0"
    usvg = "0.4.0"
    svgdom = "0.15.0"
